# divsufsort-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: release.yaml  test.yaml
benches/: bench.rs  bench_compare.rs  bench_light.rs
src/: constants.rs  divsufsort.rs  ffi.rs  lib.rs  sssort.rs  trsort.rs  utils.rs
tests/: integration.rs
