[package]
name = "divsufsort-rs"
version = "0.6.0"
edition = "2024"
description = "Pure Rust port of libdivsufsort suffix array construction library"
repository = "https://github.com/hirosassa/divsufsort-rs"
license = "MIT"

[package.metadata.release]
sign-commit = false
sign-tag = false
push = true
publish = false

[features]
default = ["std", "rayon"]
std = []
rayon = ["dep:rayon", "std"]
# Enable C libdivsufsort FFI for the bench_compare benchmark.
# Requires the vendor/libdivsufsort git submodule to be checked out.
# Usage: cargo bench --bench bench_compare --features c-bench
c-bench = ["dep:cc", "std"]

[dependencies]
rayon = { version = "1", optional = true }

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[profile.bench]
debug = true

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench_light"
harness = false

[[bench]]
name = "bench_compare"
harness = false
